# civilization_game

./: .gitignore  README.md  pyproject.toml
game/: design_doc.md  entities.py  main.py  ui.py
game/services/: aliases.py  constants.py
game/services/entities/: community.py  person.py
game/services/entities/perks/: start_community.py
game/services/utils/: observer.py
game/ui/: main_window.py
game/ui/components/: label.py
